@@ -68,6 +68,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 17027) Added siprop=configvars to meta=siteinfo
 * (bug 17048) Show the 'new' flag in list=usercontribs for the revision that created the
   page, even if it's not the top revision
+* (bug 17069) Added ucshow=patrolled|!patrolled to list=usercontribs
 
 === Languages updated in 1.15 ===
 
